FullQa New/src/objects/Connector__c.object
<CustomObject>
    <description>Used to track all Avalara connectors and associated data</description>
    <fields>
        <fullName>AIP_Enabled_Platform__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restricted Edit Access 3.7.18: https://jira.avalara.com/browse/IBST-9151

Permission Set: AIP Enabled Platform EDIT on Connector</description>
        <label>AIP Enabled Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASP_Budget__c</fullName>
        <label>ASP Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Budget_Status__c</fullName>
        <formula>TEXT(Budget__r.BudgetStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Budget Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Signed__c</fullName>
        <formula>Budget__r.DSP_Agreement_Signed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Subscriptions__c</fullName>
        <inlineHelpText>Rollup from subscription products &amp; charges where the subscription is active and the charge type is recurring.</inlineHelpText>
        <label>Active Subscriptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allow_Accelerated_QuickStart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for those integrations where GoLive can install the connector.</description>
        <inlineHelpText>If checked, this inegration can be installed by GoLive and is part of the Accelerated QuickStart program.</inlineHelpText>
        <label>Allow Accelerated QuickStart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Plain and simple, no version numbers — e.g. Eclipse, Dynamics AX, WooCommerce</inlineHelpText>
        <label>Business Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Connectors</relationshipLabel>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Track the original developer of the code associated with this connector
Integrated: Yes 
Change: Level 1 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Associate the account of the original developer of the code associated with this connector</inlineHelpText>
        <label>Author</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors (Author)</relationshipLabel>
        <relationshipName>Connectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Avalara_Product__c</fullName>
        <description>Purpose: Requested by Mark Wilhelm 
Integrated: No 
Change: Level 1 
Custodian: Partner Launch Team/Mark Wilhelm</description>
        <label>Avalara Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara Consumer Use</fullName>
                </value>
                <value>
                    <fullName>AvaTax</fullName>
                </value>
                <value>
                    <fullName>CertCapture</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Excise - Fuel</fullName>
                </value>
                <value>
                    <fullName>LandedCost</fullName>
                </value>
                <value>
                    <fullName>Lodging</fullName>
                </value>
                <value>
                    <fullName>TrustFile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avalara_Professional_Services_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Launch - Sara Simrell</description>
        <label>Avalara Professional Services Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDNotes__c</fullName>
        <label>BD Notes</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BDSalesPipeline__c</fullName>
        <label>BD Sales Pipeline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Sales #1</fullName>
                </value>
                <value>
                    <fullName>Sales #2</fullName>
                </value>
                <value>
                    <fullName>Vibrancy Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BD_Bookings_Budget__c</fullName>
        <label>BD Bookings Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BD_Ding_Budget__c</fullName>
        <label>BD Ding Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Body_Copy_RTF__c</fullName>
        <label>Body Copy RTF</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Body_Copy__c</fullName>
        <inlineHelpText>A few paragraphs on the benefits of this integration:
1) problem the software solves 
2) tax problems still exist
3) joy of AvaTax integration
Optional:highlight any software features enabled by integrating AvaTax
HTML allowed: &lt;b&gt;&lt;i&gt;&lt;ul&gt;&lt;li&gt;&lt;a href&gt;</inlineHelpText>
        <label>Body Copy</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budgeted</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Track the account for budget relationship purposes
Integrated: No 
Change: Level 0 
Custodian: Pascal Van Dooren / Marshall Kushnarik</description>
        <inlineHelpText>Associate the account where the budget relationship for this connector is maintained (The connector may have been authored, is managed by, is commissioned to Avalara but Related to a partner for budgetary purposes)</inlineHelpText>
        <label>Budget</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors</relationshipLabel>
        <relationshipName>Connectors2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calc_Velocity2__c</fullName>
        <label>Calc Velocity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connector CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Versions_Sumary__c</fullName>
        <description>Purpose: Track 30 day delta between old calc estimation and new calc estimation 
Integrated: No 
Change: Level 0 
Custodian: OEM Onboarding Team</description>
        <inlineHelpText>Textual roll up of all certified versions associated with this connector (RollUp Helper Controlled)</inlineHelpText>
        <label>Certified Versions Sumary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Velocity2__c</fullName>
        <label>Certs Velocity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Availability__c</fullName>
        <label>Channel Availability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assisted Path</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>API Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOHO</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Anchor</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Strategic Initiatives Group</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Branded_One_Sheets_Ordered__c</fullName>
        <label>Co Branded One Sheets Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Branded_One_Sheets_Shipped__c</fullName>
        <label>Co Branded One Sheets Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissions_Paid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissions Paid</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors (Commissions Paid)</relationshipLabel>
        <relationshipName>Connectors5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Create Request: IBST-13854</description>
        <label>Competition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCH</fullName>
                </value>
                <value>
                    <fullName>Sovos</fullName>
                </value>
                <value>
                    <fullName>TaxCloud</fullName>
                </value>
                <value>
                    <fullName>Taxify</fullName>
                </value>
                <value>
                    <fullName>Taxjar</fullName>
                </value>
                <value>
                    <fullName>Thomson Reuters</fullName>
                </value>
                <value>
                    <fullName>Vertex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector_Certification_Date__c</fullName>
        <description>Launch team would like to continue to use this field. Enables better reporting. 
Was &quot;Undeprecated&quot; on 6.28.17 per request. Sara simrell</description>
        <label>1st Version Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connector_Description__c</fullName>
        <inlineHelpText>Enter a summary of the partner connector relationship, capabilities and any other pertinent information specific to this connector.</inlineHelpText>
        <label>Connector Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connector_Development_Cost__c</fullName>
        <description>Purpose: Track up front payment made to the developer to facilitate the connector creation
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter up front payment made to the developer to facilitate the connector creation</inlineHelpText>
        <label>Connector Development Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Connector_EcoSystem_Summary1__c</fullName>
        <description>Purpose: Track partner ecosystem relative to this connector
Integrated: No
Change: Level 0
Custodian: Partner Management / Liz Anderson</description>
        <inlineHelpText>Summarize the partner ecosystem relative to this connector.</inlineHelpText>
        <label>(Deprecated)Connector EcoSystem Old</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Connector_EcoSystem_Test__c</fullName>
        <label>Connector EcoSystem Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Connector_Managed_By__c</fullName>
        <description>Purpose: Track the summary level management relationship specific to this connector
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the summary level management relationship specific to this connector. The specific account should be designated in the &quot;Managed By&quot; Lookup field.</inlineHelpText>
        <label>Connector Managed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Software Publisher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector_OEM__c</fullName>
        <description>Purpose: Track OEM relationship per connector
Integrated: No
Change: Level 0
Custodian: Partner Management / Liz Anderson</description>
        <inlineHelpText>Use this field to identify whether or not this connector has an OEM</inlineHelpText>
        <label>Connector OEM?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Update: IBST-9220 - Label Changed to &quot;Connector Manager&quot;</description>
        <label>Connector Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Connector_Setup_URL__c</fullName>
        <defaultValue>&quot;https://help.avalara.com/004_AvaTax_Integrations&quot;</defaultValue>
        <label>Connector Setup URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Connector_Solution_Model__c</fullName>
        <description>Purpose: Track the solution model specific to this connector
Integrated: No 
Change: Level 0 
Custodian:  Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the primary solution model(s) specific to this connector</inlineHelpText>
        <label>Connector Solution Model</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Recurring Billing</fullName>
                </value>
                <value>
                    <fullName>Complimentary</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>ISPI</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Payment Procesor</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Sales/VAT ERP</fullName>
                </value>
                <value>
                    <fullName>Consumer Use (ERP)</fullName>
                </value>
                <value>
                    <fullName>Excise Tax</fullName>
                </value>
                <value>
                    <fullName>Exemption Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connector_Type__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-510</description>
        <inlineHelpText>https://jira.avalara.com/browse/BATS-510</inlineHelpText>
        <label>Connector Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Extractor_Connector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Definition</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>Payment Processing</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Subscription/Recurring Billing</fullName>
                </value>
                <value>
                    <fullName>Supplier Mgt/AP Automation</fullName>
                </value>
                <value>
                    <fullName>Marketplace</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>VAT</fullName>
                </value>
                <value>
                    <fullName>Consumer Use Tax</fullName>
                </value>
                <value>
                    <fullName>Consumer Use Tax-Data File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Author__c</fullName>
        <description>Which party is responsible for drawing up the contract. 
Owner: Partner Launch - Sara Simrell</description>
        <label>Contract Author</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Non_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Track whether or not the contract specific to this connector is standard
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Check this box if the contract associated with this connector is non-standard</inlineHelpText>
        <label>Contract Non Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_On_File_With_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Track whether or not the contract has been signed, countersigned and on file 
Integrated: No 
Change: Level 0 
Custodian: Golive Director</description>
        <inlineHelpText>Check this box if the contract for this connector has been signed, countersigned and on file. This will trigger the connector signed alert. Currently, only Marshal, Greg or Pascal can check this box.</inlineHelpText>
        <label>Contract On File With Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date__c</fullName>
        <description>Purpose: Track the contract renewal date specific to this connector
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the renewal date specific to this connector / amendment</inlineHelpText>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Notice_Date__c</fullName>
        <description>Purpose: Track the renewal notice date for the contract specific to this connector
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the renewal notice date for the contract date specific to this connector</inlineHelpText>
        <label>Contract Renewal Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <description>Purpose: Track connector level contract signed date
Integrated: No 
Change: Level 0 
Custodian: VP Partner Managment</description>
        <inlineHelpText>The connector specific contract or amendment signature date</inlineHelpText>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_on_File_with_Ops_Notes__c</fullName>
        <description>Purpose: Track any notes associated with the contract on file with ops boolean 
Integrated: No 
Change: Level 0 
Custodian: Golive Director</description>
        <inlineHelpText>Notes related to the contract on file with ops boolean</inlineHelpText>
        <label>Contract on File with Ops Notes</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Base__c</fullName>
        <description>Purpose: Track the total number of customers applicable to this connector
Integrated: No 
Change: Level 0 
Custodian: Business Development / Greg Chapman</description>
        <inlineHelpText>Enter the total customer base specific to this connector</inlineHelpText>
        <label>Connector Customer Base</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSPWebsite__c</fullName>
        <description>The URL from the Account populated in the &apos;Managed By&apos; field</description>
        <formula>IF(ISBLANK(Managed_By__r.Website), &quot;&quot;, IF(LEFT(Managed_By__r.Website,7)=&quot;http://&quot;,Managed_By__r.Website,&quot;http://&quot; &amp; Managed_By__r.Website))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The URL from the Account populated in the &apos;Managed By&apos; field</inlineHelpText>
        <label>DSP URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP_PPM_ID__c</fullName>
        <formula>PPM__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSP PPM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP_Partner_Number__c</fullName>
        <formula>DSP__r.PartnerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSP Partner Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP_SAM_ID__c</fullName>
        <formula>SAM__r.CaseSafeID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSP SAM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Track the account for which commissions will be paid for the sale of this connector
Integrated: Yes 
Change: Level 1 
Custodian: Greg Chapman / Marshall Kushnarik</description>
        <inlineHelpText>Associate the account that will be paid commissions based upon the sale of this connector</inlineHelpText>
        <label>DSP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors (DSP)</relationshipLabel>
        <relationshipName>Connectors1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dedicated_800_Number__c</fullName>
        <label>Dedicated 800 Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Default_Free_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Default Free Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Path__c</fullName>
        <label>Default Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Self_Serve__c</fullName>
        <label>Default Implementation Path</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Serve</fullName>
                </value>
                <value>
                    <fullName>Assisted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Managed</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Video_Date__c</fullName>
        <label>Demo Video Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dev_Info_RTF__c</fullName>
        <label>Dev Info RTF</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dev_Info__c</fullName>
        <inlineHelpText>A paragraph (couple sentences) about the software developer identified above in ManagedBy/Author.  This is not about the software but rather the company that wrote/maintains the connector code.

HTML allowed: &lt;b&gt;&lt;i&gt;&lt;ul&gt;&lt;li&gt;&lt;a href&gt;</inlineHelpText>
        <label>Dev Info</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Wiki__c</fullName>
        <label>Developer Wiki</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Development_Available_Connector__c</fullName>
        <label>Development Available Connector</label>
        <summarizedField>Version__c.Count__c</summarizedField>
        <summaryFilterItems>
            <field>Version__c.Status__c</field>
            <operation>equals</operation>
            <value>Existing - In Development, Existing - Not Certified, Certified</value>
        </summaryFilterItems>
        <summaryForeignKey>Version__c.Connector__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Development_Available__c</fullName>
        <label>Development Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Connectors (Development Partner)</relationshipLabel>
        <relationshipName>Connectors3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ding_BDOwner__c</fullName>
        <formula>Author__r.BusDevOwner__r.FirstName&amp;&quot; &quot;&amp; Author__r.BusDevOwner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ding BD Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ding_CDM__c</fullName>
        <formula>Author__r.CDM__r.FirstName &amp; &quot; &quot; &amp;  Author__r.CDM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ding CDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ding_Owner__c</fullName>
        <formula>Author__r.Owner.FirstName &amp; &quot; &quot; &amp;  Author__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ding Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ding_Sales_Rep__c</fullName>
        <formula>Author__r.Sales_Rep__r.FirstName &amp; &quot; &quot; &amp;  Author__r.Sales_Rep__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ding Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Status__c</fullName>
        <description>Used for Sales Opportunity Segmentation and Routing</description>
        <label>ERP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Non-ERP</fullName>
                </value>
                <value>
                    <fullName>Either</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Adopter_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify BD user who is managing the launch process in the early adoption phase
Owner: Jesse Powell

Updated 7.11.17 - Changed Field Lable to BD Sales Owner - Request by Alex DeBlois approved by Marshal K.

https://jira.avalara.com/browse/IBST-4190</description>
        <label>BD Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Connectors3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Excerpt__c</fullName>
        <inlineHelpText>A 2-3 sentence paragraph summarizing the body copy above -- it is to be keyword rich, specifically mentioning the partner software name, developer name if different, Avalara AvaTax, sales tax, etc.</inlineHelpText>
        <label>Excerpt</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extractor_Connector__c</fullName>
        <description>https://jira.avalara.com/browse/BATS-510</description>
        <inlineHelpText>https://jira.avalara.com/browse/BATS-510</inlineHelpText>
        <label>Extractor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>